--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "![cf](http://i.imgur.com/7v5ASc8.png)  Intro to ExpressJS ===",
   "main": "index.js",
   "scripts": {
-    "start": "DEBUG=myapp.* nodemon server.js",
+    "start": "node server.js",
+    "start:watch": "nodemon server.js",
     "test": "MONGODB_URI=mongodb://localhost/pirates-test mocha",
     "test:watch": "MONGODB_URI=mongodb://localhost/pirates-test nodemon --exec mocha",
     "build": "rollup -c",
     "build:watch": "nodemon --watch src -e js,html --exec 'npm run build'"
+  },
+  "engines": {
+    "node": "6.9.1"
   },
   "author": "Marty Nelson <marty@martypdx.com>",
   "license": "ISC",
