--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,38 @@
 {
-    "env": {
-        "es6": true,
-        "node": true
-    },
-    "extends": "eslint:recommended",
-    "rules": {
-        "indent": [
-            "error",
-            4
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
+	"parserOptions": {
+		"ecmaVersion": 6,
+		"sourceType": "module",
+		"ecmaFeatures": {
+			"modules": true,
+			"experimentalObjectRestSpread": true,
+			"impliedStrict": true
+		}
+	},
+	"env": {
+		"es6": true,
+		"node": true,
+		"mocha": true	
+	},
+	"globals": {
+	
+	},
+	"rules": {
+		"no-console": 0,
+		"indent": [
+			"error",
+			"tab"
+		],
+		"quotes": [
+			2,
+			"single"
+		],
+		"linebreak-style": [
+			2,
+			"unix"
+		],
+		"semi": [
+			2,
+			"always"
+		]
+	}
 }
