--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "![cf](http://i.imgur.com/7v5ASc8.png)  Intro to ExpressJS ===",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "env $(cat .env) node server.js",
     "start:watch": "nodemon server.js",
     "test": "mocha",
-    "test:watch": "MONGODB_URI=mongodb://localhost/pirates-test nodemon --exec mocha",
+    "test:watch": "nodemon --exec mocha",
     "build": "rollup -c",
     "build:watch": "nodemon --watch src -e js,html --exec 'npm run build'"
   },
